--- a/inference_rules.adoc
+++ b/inference_rules.adoc
@@ -445,11 +445,12 @@ Non-conforming network submission should be submitted to Open category, under th
 ==== QDL Constraints
 
 * The QDL is not allowed to do any pre-processing. e.g. changing of precision, or data layout.
-* The QDL is not allowed to do and post-processing of the responses, e.g. gather, reduction, or ArgMax.
+* The QDL is not allowed to do any post-processing of the responses, e.g. gather, reduction, or ArgMax.
 * If an SUT compresses its output, the QDL must decompress the output. Decompression is a timed operation. No other post-processing in the QDL is allowed.
 * The QDL is not allowed to batch queries.
 * The QDL is not allowed to pad the data in queries.
 * The QDL is not allowed to cache queries or responses.
+* The QDL is implementing the network function of the LoadGen Node towards the SUT node and handles the required processing. E.G. padding to of the payload to the required network protocol.
 * The Name method's return value must contain the substring "Network SUT".
 * The Name method's implementation must include at least one round trip over the network. The Name method must not return until the round trip is complete.
 
@@ -484,7 +485,7 @@ Fabric and protocol must be reported in the submission metadata. Submission meta
 * SUT can do the required pre-processing of the data, e.g. Batching, Padding, processing of the requests (precision, data layout), compression, decompression. SUT can do the required post processing functions e.g. gather, reduction or ArgMax. 
 * Network interface characteristics must be added to the report, both at the SUT side and at the LoadGen system side, including networking components, and name any other components through which data passes between LoadGen and the SUT for reproducibility.
 * It is required to add a system diagram that shows how the components between the LoadGen node and the SUT node are connected and to add text that explains the diagram.
-* For reproducibility, it is required to specify software version of all components, HW configurations, software stacks, dockers and settings.
+* For reproducibility, it is required to specify software version of all components, Hardware configurations, software stacks, dockers, and settings of all components and stacks.
 
 ==== Benchmarks and QSL Preprocessing
 
