--- a/inference_rules.adoc
+++ b/inference_rules.adoc
@@ -485,7 +485,7 @@ Fabric and protocol must be reported in the submission metadata. Submission meta
 
 ==== Benchmarks and QSL Preprocessing
 Untimed operations for data pre-processing and response post-processing, as defined in current Closed division, are maintained, so that the Closed division and Network division are aligned on benchmark inputs and outputs.
-Data formats for inputs and outputs are allowed to be compressed for network transmission, providing a tradeoff between compute and network bandwidth. Data transferred between the LoadGen system and the SUT can be compressed using one of the options from the following table for each benchmark. Compression is performed by QSL, and is untimed. The compression scheme needs approval by the Working Group, allowing compression schemes that will be suitable for production, so for example, very asymmetric schemes are not expected to be approved. If untimed pre-processing is done on the uncompressed data and compression is used as specified above, then this pre-processing will be executed at the SUT after the decompression function.
+Data formats for inputs and outputs are allowed to be compressed for network transmission, providing a tradeoff between compute and network bandwidth. Data transferred between the LoadGen system and the SUT can be compressed using one of the options from the following table for each benchmark. Compression is performed by QSL, and is untimed. The compression scheme needs approval by the Working Group, allowing compression schemes that will be suitable for production, so for example, very asymmetric schemes are not expected to be approved. If untimed data pre-processing is done on the uncompressed data, and compression is used as specified above, then this pre-processing can be executed at the SUT after the decompression function and then it will be timed.
 
 |===
 |*Area* | *Task* | *Model* | *QSL side PreProcessing^(1,2,3)^*
